--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Install Julia
       run: |
-        mkdir -p julia;
-        curl -s https://julialang-s3.julialang.org/bin/linux/x64/1.4/julia-1.4.0-linux-x86_64.tar.gz | tar xzvf - -C julia/;
+        mkdir -p julia
+        curl -s https://julialang-s3.julialang.org/bin/linux/x64/1.4/julia-1.4.0-linux-x86_64.tar.gz | tar xzvf - -C julia/
         sudo ln -s "$(pwd)"/julia/julia-1.4.0/bin/julia /usr/local/bin/julia
       shell: bash
       
