--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,6 @@ version = "0.1.0"
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
