--- a/Project.toml
+++ b/Project.toml
@@ -8,5 +8,6 @@ Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
